F&GDEV/src/objects/Filing_Objection__c.object
<CustomObject>
    <fields>
        <fullName>Objection_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Objection Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Filing_Objections_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objection_Closed__c</fullName>
        <label>Objection Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Detail__c</fullName>
        <label>Objection Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objection_Received__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Objection Received</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Response_Detail__c</fullName>
        <label>Objection Response Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objection_Response_Required_By__c</fullName>
        <label>Objection Response Required By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Response_Submitted__c</fullName>
        <label>Objection Response Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Response_Summary__c</fullName>
        <label>Objection Response Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objection_State__c</fullName>
        <formula>TEXT(Policy_Form_State__r.State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Objection State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objection_Summary__c</fullName>
        <label>Objection Summary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Form_State__c</fullName>
        <label>Policy Form State</label>
        <referenceTo>Filing_Status__c</referenceTo>
        <relationshipLabel>Filing Objections</relationshipLabel>
        <relationshipName>Filing_Objections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Will_Not_Be_Responding__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, the Filing Status on the Policy Form State record will have a status of &quot;Withdrawn&quot;.</inlineHelpText>
        <label>Will Not Be Responding</label>
        <type>Checkbox</type>
    </fields>
    <label>Filing Objection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Objection_Received__c</columns>
        <columns>Policy_Form_State__c</columns>
        <columns>Objection_Summary__c</columns>
        <columns>Objection_Response_Required_By__c</columns>
        <columns>Objection_Assigned_To__c</columns>
        <columns>Objection_Response_Submitted__c</columns>
        <columns>Objection_Response_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Objections_By_State</fullName>
        <columns>NAME</columns>
        <columns>Objection_Received__c</columns>
        <columns>Objection_Response_Submitted__c</columns>
        <columns>Policy_Form_State__c</columns>
        <columns>Objection_Summary__c</columns>
        <columns>Objection_Detail__c</columns>
        <columns>Objection_Response_Summary__c</columns>
        <columns>Objection_Response_Detail__c</columns>
        <columns>Objection_Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>Objections By State</label>
    </listViews>
    <listViews>
        <fullName>Outstanding_Objections</fullName>
        <columns>NAME</columns>
        <columns>Objection_State__c</columns>
        <columns>Policy_Form_State__c</columns>
        <columns>Objection_Received__c</columns>
        <columns>Objection_Summary__c</columns>
        <columns>Objection_Response_Required_By__c</columns>
        <columns>Objection_Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Objection_Response_Submitted__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Will_Not_Be_Responding__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Outstanding Objections</label>
    </listViews>
    <nameField>
        <displayFormat>OBJ-{000000}</displayFormat>
        <label>Filing Objection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filing Objections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>